added contact us page and filled in some information for the first assignment

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,3 @@
 <h1>About us</h1>
 <p>We're working on our One Month Rails project.</p>
+<p>By completing the project, we'll become web app masters.  After that, we will start developing apps to help people find and buy locally farmed food products!</p>
