--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,3 @@
 <h1>Contact Us</h1>
 <p>Get to know us!  Send an email or call us up any time.</p>
+<p>We promise, we're extremely friendly people.  Really, just drop us a line!</p>
