--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
 <h1>Welcome to my website!</h1>
 <p>Sign up here.</p>
+<p>Just kidding.  You can't sign up yet, but come back in a couple months if you would like to find and buy locally farmed foods such as vegetables, fruit, meats, eggs, and dairy!</p>
