--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,6 @@
-<h1>About us</h1>
-<p>We're working on our One Month Rails project.</p>
-<p>By completing the project, we'll become web app masters.  After that, we will start developing apps to help people find and buy locally farmed food products!</p>
+<div class="jumbotron">
+    <div class="container">
+        <h1>About us</h1>
+        <p>This is the sample project I built for <a href="https://onemonthrails.com">One Month Rails</a>.</p>
+    </div>
+</div>
