--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,26 @@
     <nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
       <div class="container">
         <%= link_to "One Month Rails", root_path, class: "navbar-brand" %>
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "About", about_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "Contact", "#", class: "nav-link" %></li>
         </ul>
+        <ul class="navbar-nav">
+          <% if user_signed_in? %>
+            <li class="nav-item"><%= link_to "Log out", sign_out_path, method: :delete, class: "nav-link" %><li>
+          <% else %>
+          <li class="nav-item"><%= link_to "Sign in", sign_in_path, class: "nav-link" %><li>
+            <li class="nav-item"><%= link_to "Sign up", sign_up_path, class: "btn btn-primary" %><li>
+          <% end %>
+        </ul>
       </div>
     </nav>
+
+    <!-- Flash Messages -->
+    <% flash.each do |name, message| %>
+      <%= content_tag(:div, message, class: "alert alert-info #{name}") %>
+    <% end %>
 
     <!-- Page Content -->
     <%= yield %>
