updated to longclaw website sample fo homework 2

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
-<div class="jumbotron">
+<div class="jumbotron jumbotron-about">
     <div class="container">
         <h1>About us</h1>
-        <p>This is the sample project I built for <a href="https://onemonthrails.com">One Month Rails</a>.</p>
+        <p>We love adventure, we love photography, and we love to share them both.</p>
     </div>
 </div>
