--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,7 @@
-<h1>Contact Us</h1>
-<p>Get to know us!  Send an email or call us up any time.</p>
-<p>We promise, we're extremely friendly people.  Really, just drop us a line!</p>
+<div class="jumbotron jumbotron-contact">
+    <div class="container">
+        <h1>Contact us</h1>
+        <p>Get to know us!  Send an email or call us up any time.</p>
+        <p>We promise, we're extremely friendly people.  Really, just drop us a line!</p>
+    </div>
+</div>
