--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,30 +5,28 @@
         </div>
     </div>
 <% else %>
-
     <div class="jumbotron jumbotron-home">
         <div class="container">
-            <h1>Welcome to my website!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-            <%= link_to "Learn more »", "#", class: "btn btn-primary btn-lg" %> 
+            <h1>Epic. Adventure. Photography.</h1>
+            <%= link_to "Learn more »", contact_path, class: "btn btn-primary btn-lg" %> 
         </div>
     </div>
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><%= link_to "View details", "#", class: "btn btn-secondary" %></p>
+                <h2>Learn photography</h2>
+                <p>Already love the outdoors, but never used a camera? No problem. We'll have you shooting like a pro in no time.</p>
+                <p><%= link_to "View details", contact_path, class: "btn btn-primary" %></p>
             </div>
             <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><%= link_to "View details", "#", class: "btn btn-secondary" %></p>
+                <h2>Guided photo trips</h2>
+                <p>We live for epic backcountry expeditions and offer custom single or multi-day trips into the real bush-bush. At the end, you'll have the memories (and photos) of a lifetime.</p>
+                <p><%= link_to "View details", contact_path, class: "btn btn-primary" %></p>
             </div>
             <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><%= link_to "View details", "#", class: "btn btn-secondary" %></p>
+                <h2>Hunting, fishing, comps</h2>
+                <p>Have an upcoming backcountry hunt, fishing trip, or competition?  Let us document it for you.  You focus on execution and we'll make sure you never forget the experience.</p>
+                <p><%= link_to "View details", contact_path, class: "btn btn-primary" %></p>
             </div>
         </div>
     </div>
