--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>One Month Rails Project</title>
+    <title>Longclaw Photography</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -13,11 +13,11 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
       <div class="container">
-        <%= link_to "One Month Rails", root_path, class: "navbar-brand" %>
+        <%= link_to "Longclaw Photography", root_path, class: "navbar-brand" %>
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "About", about_path, class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "Contact", "#", class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "Contact", contact_path, class: "nav-link" %></li>
         </ul>
         <ul class="navbar-nav">
           <% if user_signed_in? %>
@@ -43,7 +43,7 @@
       <div class="container">
         <hr>
         <center>
-          <p>© 2016 One Month</p>
+          <p>© 2017 Longclaw Photography</p>
         </center>
       </div>
     </footer>
