--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
 <% if user_signed_in? %>
     <div class="jumbotron jumbotron-home">
         <div class="container">
-            <h1>Welcome back!</h1>
+            <h1>Let's get started!</h1>
+            <%= link_to "Learn more »", contact_path, class: "btn btn-primary btn-lg" %>
         </div>
     </div>
 <% else %>
