--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,6 +2,12 @@
     <div class="container">
         <h1>Contact us</h1>
         <p>Get to know us!  Send an email or call us up any time.</p>
-        <p>We promise, we're extremely friendly people.  Really, just drop us a line!</p>
+    </div>
+</div>
+<div class="container">
+    <div class="col">
+        <div class="row-md-12">
+            <p>Feel free to send questions or trip requests to: jessehintz44@gmail.com</p>
+        </div>
     </div>
 </div>
