--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,26 +8,26 @@
 <% else %>
     <div class="jumbotron jumbotron-home">
         <div class="container">
-            <h1>Epic. Adventure. Photography.</h1>
-            <%= link_to "Learn more »", contact_path, class: "btn btn-primary btn-lg" %> 
+            <h1>Backcountry photo expeditions</h1>
+            <%= link_to "Get in touch »", contact_path, class: "btn btn-primary btn-lg" %> 
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
+        <div class="col">
+            <div class="row-md-12">
                 <h2>Learn photography</h2>
-                <p>Already love the outdoors, but never used a camera? No problem. We'll have you shooting like a pro in no time.</p>
-                <p><%= link_to "View details", contact_path, class: "btn btn-primary" %></p>
+                <p>Already love the outdoors, but never used a camera? No problem. We'll have you out there shooting like a pro in no time. Click below to find out more.</p>
+                <p><%= link_to "Learn more", contact_path, class: "btn btn-primary" %></p>
             </div>
-            <div class="col-md-4">
+            <div class="row-md-12">
                 <h2>Guided photo trips</h2>
                 <p>We live for epic backcountry expeditions and offer custom single or multi-day trips into the real bush-bush. At the end, you'll have the memories (and photos) of a lifetime.</p>
-                <p><%= link_to "View details", contact_path, class: "btn btn-primary" %></p>
+                <p><%= link_to "Learn more", contact_path, class: "btn btn-primary" %></p>
             </div>
-            <div class="col-md-4">
-                <h2>Hunting, fishing, comps</h2>
-                <p>Have an upcoming backcountry hunt, fishing trip, or competition?  Let us document it for you.  You focus on execution and we'll make sure you never forget the experience.</p>
-                <p><%= link_to "View details", contact_path, class: "btn btn-primary" %></p>
+            <div class="row-md-12">
+                <h2>Document your adventures</h2>
+                <p>Have an upcoming hunt or fishing trip?  Let us document it for you.  You focus on execution and we'll make sure you never forget the experience.</p>
+                <p><%= link_to "Learn more", contact_path, class: "btn btn-primary" %></p>
             </div>
         </div>
     </div>
