--- a/app/assets/stylesheets/bootstrap_customizations.scss
+++ b/app/assets/stylesheets/bootstrap_customizations.scss
@@ -116,7 +116,7 @@ $headings-color:         $sea-buckthorn;
 $line-height-lg:         (4 / 3);
 $line-height-sm:         1.5;
 
-$border-radius:          .25rem;
+$border-radius:          0.5rem;
 $border-radius-lg:       .3rem;
 $border-radius-sm:       .2rem;
 
@@ -143,3 +143,5 @@ $navbar-light-disabled-color:       rgba(0,0,0,.15);
 
 $jumbotron-padding:              3rem;
 $jumbotron-bg:                   $gray-lightest;
+
+// added customizations
