add admin interface

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
     <div class="jumbotron jumbotron-home">
         <div class="container">
             <h1>Let's get started!</h1>
-            <%= link_to "Learn more »", contact_path, class: "btn btn-primary btn-lg" %>
+            <%= link_to "Book a trip »", contact_path, class: "btn btn-primary btn-lg" %>
         </div>
     </div>
 <% else %>
