moved jumbotron text in about and contact pages to make more visible

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -15,6 +15,8 @@
     background-repeat: no-repeat;
     background-position: center 94%;
     background-size: cover;
+    padding-bottom: 15px;
+    padding-top: 12rem;
 }
 
 .jumbotron-contact {
@@ -22,4 +24,6 @@
     background-repeat: no-repeat;
     background-position: center 73%;
     background-size: cover;
+    padding-top: 15px;
+    padding-bottom: 12rem;
 }
