--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-about">
     <div class="container">
         <h1>About us</h1>
-        <p>We love adventure, we love photography, and we love to share them both.</p>
+        <p1>We love adventure, we love photography, and we love to share them both.</p>
     </div>
 </div>
