--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -1,16 +1,10 @@
-<div class='container'>
-	<h1><%= @user.username %></h1>
-	<p>Name: <%= @user.name %></p>
+<div class = 'container'>
 
   <div class="row">
     <div class="col-md-4">
         <div class="card card-block">
-          <h4 class="card-title"><%= @user.name %>'s Tweets</h4>
-          <% if current_user.following?(@user) %>
-            <p class='card-text'><%= link_to 'Unfollow', unfollow_user_path(@user.username), method: :delete %></p>
-          <% else %>
-            <p class='card-text'><%= link_to 'Follow', follow_user_path(@user.username), method: :post %></p>
-          <% end %>
+          <h4 class="card-title">Your Account</h4>
+          <p class="card-text"><%=link_to current_user.username, user_path(current_user.username) %></p>
         </div>
     </div>
     <div class = "col-md-8">
@@ -25,5 +19,4 @@
       </div>
     </div>
   </div>
-</div>
 </div>
