--- a/app/views/observations/index.html.erb
+++ b/app/views/observations/index.html.erb
@@ -1,46 +1,31 @@
 <div class = 'container'>
-  <h1>Observations</h1>
-
-  <table class = 'table'>
-    <thead>
-      <tr>
-        <th>User</th>
-        <th>Date</th>
-        <th>Species</th>
-        <th>Saw</th>
-        <th>Heard</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @observations.each do |observation| %>
-        <tr>
-          <td><%= observation.user.email %></td>
-          <td><%= observation.date %></td>
-          <td><%= observation.species %></td>
-          <% if observation.saw? %>
-            <td><%= 'yes' %></td>
-          <% else %>
-            <td><%= 'no' %></td>
+  <div class="row">
+    <div class="col-md-4">
+        <div class="card card-block">
+          <% if user_signed_in? %>
+            <h4 class="card-title">Your Account</h4>
+            <p class="card-text"><%=link_to current_user.username, user_path(current_user.username) %></p>
           <% end %>
-          <% if observation.heard? %>
-            <td><%= 'yes' %></td>
-          <% else %>
-            <td><%= 'no' %></td>
-          <% end %>
-          <% if observation.user == current_user %>
-            <td><%= link_to 'Show', observation %></td>
-            <td><%= link_to 'Edit', edit_observation_path(observation) %></td>
-            <td><%= link_to 'Destroy', observation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <% end %>
-        </tr>
+        </div>
+    </div>
+    <div class = "col-md-8">
+      <% if user_signed_in? %>
+        <center><%= link_to "New Observation »", new_observation_path, class: "btn btn-primary btn-lg" %></center>
       <% end %>
-    </tbody>
-  </table>
-
-  <br>
-  <% if user_signed_in? %>
-    <%= link_to 'New Observation', new_observation_path %>
-  <% end %>
+          <% @observations.reverse_each do |observation| %>
+            <%= link_to observation, class: "card" do %>
+              <div class='card-block'>
+                <h6 class="card-title"><%= observation.user.username %> // posted on: <%= observation.created_at.strftime("%m/%d/%Y") %></h6>
+                <% if observation.image.present? %>
+                  <center><%= image_tag observation.image, class: 'img-fluid' %></center>
+                <% end %>
+                <p class="card-text">observed on: <%= observation.date %></p>
+                <p class='card-text'>species: <%= observation.species %></p>
+                <p class='card-text'><%= observation.notes %></p>
+              </div>
+            <% end %>
+          <% end %>
+      </div>
+    </div>
+  </div>
 </div>
